2013-01-14  Max Vujovic  <mvujovic@adobe.com>

        [ANGLE] Update ANGLE in WebKit
        https://bugs.webkit.org/show_bug.cgi?id=106274

        Reviewed by Dean Jackson.

        Update ANGLE to r1641.

        ANGLE parsers were generated with Bison 2.3.

        Additionally, perform the following changes to WebKit's ANGLE build system. Note that these
        changes only apply to WebKit's copy of ANGLE, and do not need to be upstreamed to ANGLE.
        (a) Remove all files in the libEGL and libGLESv2 directories because nobody is using them. 
            Add a README in each directory to explain why their contents are not copied over from
            ANGLE. This simplifies updating ANGLE in the future.
        (b) Remove the build_angle.xcodeproj file that no-one is using. It appears it was copied
            over from a gyp build of ANGLE. The Mac build uses ANGLE.xcodeproj.
        (c) Remove duplicate file entries in ANGLE.xcodeproj. Change its Xcode group structure to
            match ANGLE's directory structure.
        (d) Add a Copy Files task to ANGLE.xcodeproj to put the khrplatform.h header in the right
            place so ShaderLang.h can find it. ShaderLang.h is copied to
            <BuildDir>/usr/local/include/ANGLE/ShaderLang.h during the Copy Headers task, and it
            includes "KHR/khrplatform.h". Thus, we need to copy khrplatform.h to
            <BuildDir>/usr/local/include/ANGLE/KHR/khrplatform.h.

        Additionally, make one build fix in ANGLE source that should be upstreamed to ANGLE:
        (1) Before this patch in ExpressionParser.y, we toggled the "-Wpragmas" flag so compilers
            could ignore the pragmas that they didn't understand instead of generating an error.
            However, clang does not understand "-Wpragmas" itself. Instead, tt understands
            "-Wunknown-pragmas". Now, instead of trying to temporarily ignore pragmas, we apply the